--- a/scripts/style.css
+++ b/scripts/style.css
@@ -22,6 +22,18 @@ body {
   width: 100%;
 }
 
+#showEquity {
+  padding:5px;
+  text-align:center;
+  background-color:#e5eecc;
+  border:solid 1px #c3c3c3;
+}
+
+#showEquity {
+  padding:50px;
+  display:none;
+}
+
 #panel,#flip {
   padding:5px;
   text-align:center;
