--- a/scripts/style.css
+++ b/scripts/style.css
@@ -22,7 +22,7 @@ body {
   width: 100%;
 }
 
-#showEquity {
+#equityButton,#showEquity {
   padding:5px;
   text-align:center;
   background-color:#e5eecc;
@@ -30,18 +30,6 @@ body {
 }
 
 #showEquity {
-  padding:50px;
-  display:none;
-}
-
-#panel,#flip {
-  padding:5px;
-  text-align:center;
-  background-color:#e5eecc;
-  border:solid 1px #c3c3c3;
-}
-
-#panel {
   padding:50px;
   display:none;
 }
