--- a/scripts/style.css
+++ b/scripts/style.css
@@ -22,6 +22,55 @@ body {
   width: 100%;
 }
 
+div#menuDemo2 {
+	width: 800px;
+    height: 30px;
+    position: relative;
+    left: 0;
+    top: 0;
+	background-color: orange;
+	color: white;
+	border-bottom: 1px solid black;
+	/*Remove this next one in production - Used for demo purpose only*/
+	margin-bottom: 300px;	
+}
+
+div#menuDemo2 ul {
+	list-style: none;
+    margin: 0;
+    padding: 0;
+	background-color: orange;
+}
+
+div#menuDemo2 > ul > li {
+	float: left;
+}
+
+div#menuDemo2 ul li {
+	width: 267px;
+	background-color: orange;
+}
+
+div#menuDemo2 ul li#homeMenu {
+	width: 266px;
+	background-color: orange;
+}
+
+div#menuDemo2 ul li a {
+	width: 266px;
+	text-decoration: none;
+}
+
+div#menuDemo2 > ul > li > ul {
+	display: none;
+	background-color: orange;
+	width: 267px;
+}
+
+div#menuDemo2 > ul > li:hover > ul {
+	display: block;
+}
+
 #equityButton,#showEquity {
   padding:5px;
   text-align:center;
