--- a/scripts/style.css
+++ b/scripts/style.css
@@ -22,7 +22,7 @@ body {
   width: 100%;
 }
 
-div#menuDemo2 {
+div#menuDemo {
 	width: 800px;
     height: 30px;
     position: relative;
@@ -35,39 +35,39 @@ div#menuDemo2 {
 	margin-bottom: 300px;	
 }
 
-div#menuDemo2 ul {
+div#menuDemo ul {
 	list-style: none;
     margin: 0;
     padding: 0;
 	background-color: orange;
 }
 
-div#menuDemo2 > ul > li {
+div#menuDemo > ul > li {
 	float: left;
 }
 
-div#menuDemo2 ul li {
+div#menuDemo ul li {
 	width: 267px;
 	background-color: orange;
 }
 
-div#menuDemo2 ul li#homeMenu {
+div#menuDemo ul li#homeMenu {
 	width: 266px;
 	background-color: orange;
 }
 
-div#menuDemo2 ul li a {
+div#menuDemo ul li a {
 	width: 266px;
 	text-decoration: none;
 }
 
-div#menuDemo2 > ul > li > ul {
+div#menuDemo > ul > li > ul {
 	display: none;
 	background-color: orange;
 	width: 267px;
 }
 
-div#menuDemo2 > ul > li:hover > ul {
+div#menuDemo > ul > li:hover > ul {
 	display: block;
 }
 
