--- a/scripts/style.css
+++ b/scripts/style.css
@@ -83,6 +83,20 @@ div#menuDemo > ul > li:hover > ul {
   display:none;
 }
 
+#portfolioButton {
+  padding:5px;
+  text-align:center;
+  background-color:#e5eecc;
+  border:solid 1px #c3c3c3;
+}
+
+#recommendButton {
+  padding:5px;
+  text-align:center;
+  background-color:#e5eecc;
+  border:solid 1px #c3c3c3;
+}
+
 #stage {
   position: relative;
   margin: 0px auto;
