--- a/scripts/style.css
+++ b/scripts/style.css
@@ -34,11 +34,16 @@ body {
   display:none;
 }
 
-#portfolioButton {
+#portfolioButton, #showPortfolio {
   padding:5px;
   text-align:center;
   background-color:#e5eecc;
   border:solid 1px #c3c3c3;
+}
+
+#showPortfolio {
+  padding:50px;
+  display:none;
 }
 
 #recommendButton {
