--- a/scripts/style.css
+++ b/scripts/style.css
@@ -18,7 +18,7 @@ body {
 #equityButton,#showEquity {
   padding:5px;
   text-align:center;
-  background-color:#e5eecc;
+  background-color:#0000ff;
   border:solid 1px #c3c3c3;
 }
 
