--- a/scripts/style.css
+++ b/scripts/style.css
@@ -10,7 +10,7 @@ img {
 
 body {
   margin: 0px; 
-  background-color:green;
+  background-color:ff0000;
   background-image: url("../images/pagebg.jpg");
   min-height: 700px;
 }
