--- a/scripts/style.css
+++ b/scripts/style.css
@@ -1,6 +1,6 @@
 {
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-	-webkit-margin-before: 0;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-margin-before: 0;
   -webkit-margin-after: 0;	
 }
 
@@ -52,212 +52,21 @@ body {
   display:none;
 }
 
+#historyButton, #showHistory{
+  padding:5px;
+  text-align:center;
+  background-color:#7FFFD4;
+  border:solid 1px #c3c3c3;
+}
+
+#showHistory {
+  padding:50px;
+  display:none;
+}
+
 #recommendButton {
   padding:5px;
   text-align:center;
   background-color:#00ffff;
   border:solid 1px #c3c3c3;
-}
-
-#welcome_msg_container {
-  background-image: url("../images/panel_welcome.png");
-  position:absolute;
-  left:0px;
-  top:10px;
-  width: 458px;
-  height: 170px;
-}
-
-#welcome_msg {
-  color: #ebebeb;
-  padding-top: 16px;
-  padding-left: 170px;
-  font: 28pt "Arial Narrow", Arial, sans-serif;
-  position: absolute;
-}
-
-#welcome_submsg {
-  color: #aaa;
-  padding-top: 58px;
-  padding-left: 170px;
-  font: 20pt "Arial Narrow", Arial, sans-serif;
-  position: absolute;
-}
-
-#welcome_img {
-  padding-top: 11px;
-  padding-left: 9px;
-  position: absolute;
-}
-
-#modal_background {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 99;
-  background: rgba(0,0,0,0.5);
-  opacity: 0;
-}
-
-#store {
-  position: absolute;
-  background-image: url("../images/modal_box.png");
-  width: 420px;
-  height: 500px;
-  top: 25px;
-  left: 260px;
-  padding: 5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #e34c32;
-  border-color: #262626;
-  z-index:100;
-  color: #ebebeb;
-  font: 28pt "Arial Narrow", Arial, sans-serif;
-  overflow: hidden;
-  opacity: 0;
-}
-
-#store h1 {
-  display: inline-block;
-  color: white;
-  font: 28pt "Arial Narrow", Arial, sans-serif;
-}
-
-#close_button {
-  width:50px;
-  height:50px;
-  background-image: url("../images/close_button.png");
-  position: relative;
-  left: 665px;
-  z-index:102;
-  opacity: 0;
-  cursor: pointer;
-}
-
-.store_button {
-  width: 115px;
-  height: 50px;
-  position: absolute;
-  background-color: #262626;
-  margin: 5px auto;
-  cursor: pointer;
-  border-top-style: hidden;
-  border-right-style:solid;
-  border-bottom-style: solid;
-  border-left-style: hidden;
-  border-width: 1px;
-  border-color: black;
-}
-
-.button_tag {
-  font: 16pt "Arial Narrow", Arial, sans-serif;
-  color: white;
-  text-align: left;
-  display: inline-block;
-}
-
-.store_button img {
-  margin-left: -25px;
-  margin-top: -7px;
-  margin-right: 0px;
-  vertical-align: top;
-}
-
-.selected {
-  border-style: solid;
-  border-width: 2px;
-  border-color: #e34c32;
-  background-color: #606060;
-}
-
-#store_contents {
-  position: absolute;
-  top: 155px;
-  width: 100%;
-  height: 350px;
-  overflow-y: scroll;
-  overflow-x: hidden;
-}
-
-#store_contents h3, #store_contents select {
-  display:inline;
-  font-size: 25px;
-}
-
-
-.store_package {
-  display: inline-block !important;
-  width: 97%;
-  height: 45px;
-  margin: 0px 0px 5px 0 !important;
-  background-color: #444;
-  border-top: 10px black;
-  padding-top: 0px;
-  line-height: 41px;
-  text-align: left;
-  border: solid 3px #262626;
-}
-
-.store_package span {
-  margin-left: 40px;
-}
-
-.store_package:hover {
-  background-color: #606060;
-}
-
-.store_package h3 {
-  display: inline-block !important;
-  margin: 10px;
-  font: 18pt "Arial Narrow", Arial, sans-serif;
-  min-width: 90px;
-}
-
-.store_package .quantity {
-  min-width: 100px;
-}
-
-
-
-.button_small {
-  width: 70px;
-  height: 27px;
-  color: white;
-  cursor: pointer;
-  text-align: center;
-  background-color: #e34c32;
-  border-style: solid;
-  border-width: 3px;
-  border-color: #262626;
-  font: 15pt "Arial Narrow", Arial, sans-serif;
-  margin: 0px 0px 0px 0px;
-  display: inline-block;
-  vertical-align: middle;
-  cursor: pointer;
-}
-
-#pop_up {
-  position: absolute;
-  background-image: url("../images/modal_box.png");
-  width: 420px;
-  height: 265px;
-  top: 25px;
-  left: 260px;
-  padding: 5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #e34c32;
-  border-color: #262626;
-  z-index:100;
-  color: #ebebeb;
-  font: 28pt "Arial Narrow", Arial, sans-serif;
-  overflow: hidden;
-  opacity: 0;
-}
-
-#pop_up h1 {
-  display: inline-block;
-  color: white;
-  font: 28pt "Arial Narrow", Arial, sans-serif;
 }
