--- a/scripts/style.css
+++ b/scripts/style.css
@@ -55,7 +55,7 @@ body {
 #historyButton, #showHistory{
   padding:5px;
   text-align:center;
-  background-color:#7FFFD4;
+  background-color:#87CEFA;
   border:solid 1px #c3c3c3;
 }
 
