--- a/scripts/style.css
+++ b/scripts/style.css
@@ -18,13 +18,12 @@ body {
 #equityButton,#showEquity {
   padding:5px;
   text-align:center;
-  background-color:#F0F8FF;
+  background-color:#F0f8ff;
   border:solid 1px #c3c3c3;
 }
 
 #showEquity {
   padding:50px;
-  background-colour:#7FFFD4;
   display:none;
 }
 
@@ -38,7 +37,6 @@ body {
 #showForm {
   text-align:left;
   padding:50px;
-  background-colour:#7FFFD4;
   display:none;
 }
 
@@ -51,7 +49,6 @@ body {
 
 #showPortfolio {
   padding:50px;
-  background-colour:#7FFFD4;
   display:none;
 }
 
@@ -64,13 +61,12 @@ body {
 
 #showHistory {
   padding:50px;
-  background-colour:#7FFFD4;
   display:none;
 }
 
 #recommendButton {
   padding:5px;
   text-align:center;
-    background-color:#f0f8ff;
+  background-color:#f0f8ff;
   border:solid 1px #c3c3c3;
 }
