--- a/scripts/style.css
+++ b/scripts/style.css
@@ -16,22 +16,22 @@ body {
 }
 
 #equityButton,#showEquity {
- padding: 20px;
+   padding: 10px;
    margin: 10px;
-   background: #ff0030;
+   background: #7fff00;
    color: #fff;
-   font-size: 21px;
+   font-size: 16px;
    font-weight: bold;
    line-height: 1.3em;
    border: 2px dashed #fff;
    border-radius: 10px;
-   box-shadow: 0 0 0 4px #ff0030, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+   box-shadow: 0 0 0 4px #7fff00, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    text-shadow: -1px -1px #aa3030;
    font-weight: normal;
 }
 
 body {
-  padding: 10px;
+  padding: 5px;
 }
 
 #showEquity {
