--- a/scripts/style.css
+++ b/scripts/style.css
@@ -25,13 +25,13 @@ body {
    line-height: 1.3em;
    border: 2px dashed #fff;
    border-radius: 10px;
-   box-shadow: 0 0 0 4px #7fff00, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    text-shadow: -1px -1px #000000;
    font-weight: normal;
 }
 
 body {
-  padding: 5px;
+  padding: 8px;
 }
 
 #showEquity {
