--- a/scripts/style.css
+++ b/scripts/style.css
@@ -16,9 +16,9 @@ body {
 }
 
 #equityButton,#showEquity {
-   padding: 12px;
+   padding: 20px;
    margin: 12px;
-   background: #7fff00;
+   background: #c0c0c0;
    color: #fff;
    font-size: 20px;
    font-weight: bold;
@@ -40,10 +40,22 @@ body {
 }
 
 #purchasingformButton, #showForm {
-  padding:5px;
-  text-align:center;
-  background-color:#7fff00;
-  border:solid 1px #c3c3c3;
+   padding: 20px;
+   margin: 12px;
+   background: #c0c0c0;
+   color: #fff;
+   font-size: 20px;
+   font-weight: bold;
+   line-height: 1.3em;
+   border: 2px dashed #fff;
+   border-radius: 10px;
+   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+   text-shadow: -1px -1px #000000;
+   font-weight: normal;
+}
+
+body {
+  padding: 15px;
 }
 
 #showForm {
@@ -53,10 +65,22 @@ body {
 }
 
 #portfolioButton, #showPortfolio {
-  padding:5px;
-  text-align:center;
-  background-color:#7fff00;
-  border:solid 1px #c3c3c3;
+  padding: 20px;
+   margin: 12px;
+   background: #c0c0c0;
+   color: #fff;
+   font-size: 20px;
+   font-weight: bold;
+   line-height: 1.3em;
+   border: 2px dashed #fff;
+   border-radius: 10px;
+   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+   text-shadow: -1px -1px #000000;
+   font-weight: normal;
+}
+
+body {
+  padding: 15px;
 }
 
 #showPortfolio {
@@ -65,10 +89,22 @@ body {
 }
 
 #historyButton, #showHistory{
-  padding:5px;
-  text-align:center;
-  background-color:#7fff00;
-  border:solid 1px #c3c3c3;
+  padding: 20px;
+   margin: 12px;
+   background: #c0c0c0;
+   color: #fff;
+   font-size: 20px;
+   font-weight: bold;
+   line-height: 1.3em;
+   border: 2px dashed #fff;
+   border-radius: 10px;
+   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+   text-shadow: -1px -1px #000000;
+   font-weight: normal;
+}
+
+body {
+  padding: 15px;
 }
 
 #showHistory {
@@ -77,8 +113,20 @@ body {
 }
 
 #recommendButton {
-  padding:5px;
-  text-align:center;
-  background-color:#7fff00;
-  border:solid 1px #c3c3c3;
+  padding: 20px;
+   margin: 12px;
+   background: #c0c0c0;
+   color: #fff;
+   font-size: 20px;
+   font-weight: bold;
+   line-height: 1.3em;
+   border: 2px dashed #fff;
+   border-radius: 10px;
+   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+   text-shadow: -1px -1px #000000;
+   font-weight: normal;
+}
+
+body {
+  padding: 15px;
 }
