--- a/scripts/style.css
+++ b/scripts/style.css
@@ -12,7 +12,7 @@ body {
   margin: 0px; 
   background-color:green;
   background-image: url("../images/lb.jpg");
-  min-height: 900px;
+  min-height: 1000px;
 }
 
 #equityButton,#showEquity {
@@ -21,7 +21,7 @@ body {
    background: #ff7f50;
    color: #fff;
    font-size: 20px;
-   font-weight: bold;
+   font-weight: normal;
    line-height: 1.3em;
    border: 2px dashed #fff;
    border-radius: 10px;
@@ -45,7 +45,7 @@ body {
    background: #ff7f50;
    color: #fff;
    font-size: 20px;
-   font-weight: bold;
+   font-weight: normal;
    line-height: 1.3em;
    border: 2px dashed #fff;
    border-radius: 10px;
@@ -70,7 +70,7 @@ body {
    background: #ff7f50;
    color: #fff;
    font-size: 20px;
-   font-weight: bold;
+   font-weight: normal;
    line-height: 1.3em;
    border: 2px dashed #fff;
    border-radius: 10px;
@@ -94,7 +94,7 @@ body {
    background: #ff7f50;
    color: #fff;
    font-size: 20px;
-   font-weight: bold;
+   font-weight: 900;
    line-height: 1.3em;
    border: 2px dashed #fff;
    border-radius: 10px;
@@ -118,7 +118,7 @@ body {
    background: #ff7f50;
    color: #fff;
    font-size: 20px;
-   font-weight: bold;
+   font-weight: 900;
    line-height: 1.3em;
    border: 2px dashed #fff;
    border-radius: 10px;
