--- a/scripts/style.css
+++ b/scripts/style.css
@@ -21,7 +21,7 @@ body {
    background: #ff7f50;
    color: #fff;
    font-size: 20px;
-   font-weight: normal;
+   font-weight: lighter;
    line-height: 1.3em;
    border: 2px dashed #fff;
    border-radius: 10px;
