--- a/scripts/style.css
+++ b/scripts/style.css
@@ -21,13 +21,13 @@ body {
    background: #ff7f50;
    color: #fff;
    font-size: 20px;
-   font-weight: lighter;
+   font-weight: bolder;
    line-height: 1.3em;
    border: 2px dashed #fff;
    border-radius: 10px;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    text-shadow: -1px -1px #000000;
-   font-weight: normal;
+   font-weight: bolder;
 }
 
 body {
