--- a/scripts/style.css
+++ b/scripts/style.css
@@ -27,6 +27,7 @@ body {
    border-radius: 10px;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: bolder;
+   width:50%;
 }
 
 body {
@@ -50,6 +51,7 @@ body {
    border-radius: 10px;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: normal;
+   width:50%;
 }
 
 body {
@@ -74,6 +76,7 @@ body {
    border-radius: 10px;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: normal;
+   width:50%;
 }
 
 body {
@@ -86,7 +89,7 @@ body {
 }
 
 #historyButton, #showHistory{
-  padding: 20px;
+   padding: 20px;
    margin: 12px;
    background: #ff7f50;
    color: #fff;
@@ -97,6 +100,7 @@ body {
    border-radius: 10px;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: normal;
+   width:50%;
 
 }
 
@@ -121,6 +125,7 @@ body {
    border-radius: 10px;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: normal;
+   width:50%;
 }
 
 body {
