--- a/scripts/style.css
+++ b/scripts/style.css
@@ -27,7 +27,7 @@ body {
    border-radius: 10px;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: bolder;
-   width:70%;
+   width:80%;
 }
 
 body {
@@ -35,6 +35,7 @@ body {
 }
 
 #showEquity {
+  text-align:left;
   padding:50px;
   display:none;
 }
@@ -51,7 +52,7 @@ body {
    border-radius: 10px;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: normal;
-   width:70%;
+   width:80%;
 }
 
 body {
@@ -76,7 +77,7 @@ body {
    border-radius: 10px;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: normal;
-   width:70%;
+   width:80%;
 }
 
 body {
@@ -100,7 +101,7 @@ body {
    border-radius: 10px;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: normal;
-   width:70%;
+   width:80%;
 
 }
 
@@ -125,7 +126,7 @@ body {
    border-radius: 10px;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: normal;
-   width:70%;
+   width:80%;
 }
 
 body {
