--- a/scripts/style.css
+++ b/scripts/style.css
@@ -27,7 +27,8 @@ body {
    border-radius: 10px;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: bolder;
-   width:40%;
+   width:50%;
+   text-align: center
 }
 
 body {
@@ -53,7 +54,8 @@ body {
    border-radius: 10px;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: normal;
-   width:40%;
+   width:50%;
+   text-align: center
 }
 
 body {
@@ -64,6 +66,7 @@ body {
   text-align:left;
   padding:50px;
   display:none;
+  width:85%;
 }
 
 #portfolioButton, #showPortfolio {
@@ -78,7 +81,8 @@ body {
    border-radius: 10px;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: normal;
-   width:40%;
+   width:50%;
+   text-align: center
 }
 
 body {
@@ -88,6 +92,7 @@ body {
 #showPortfolio {
   padding:50px;
   display:none;
+  width:85%;
 }
 
 #historyButton, #showHistory{
@@ -102,7 +107,8 @@ body {
    border-radius: 10px;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: normal;
-   width:40%;
+   width:50%;
+   text-align: center
 
 }
 
@@ -113,18 +119,23 @@ body {
 #showHistory {
   padding:50px;
   display:none;
+  width:85%;
 }
 
 #recommendButton {
- font-family: Arial, Sans-Serif;
-    font-size: 15px;
-    color:#779EC0;
-    display: block;
-    padding: 4px;
-    margin-top:10px;
-    border: solid 1px #85b1de;
-    background-color: #EDF2F7;
-    width:50%;
+  padding: 20px;
+   margin: 12px;
+   background: #ff7f50;
+   color: #fff;
+   font-size: 20px;
+   font-weight: 900;
+   line-height: 1.3em;
+   border: 2px dashed #fff;
+   border-radius: 10px;
+   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+   font-weight: normal;
+   width:50%;
+   text-align: center
 }
 
 body {
