--- a/scripts/style.css
+++ b/scripts/style.css
@@ -16,19 +16,19 @@ body {
 }
 
 #equityButton,#showEquity {
-   padding: 20px;
-   margin: 12px;
-   background: #ff7f50;
-   color: #fff;
-   font-size: 20px;
+   padding: 12px;
+   margin: 10px;
+   background: #ADFF2F;
+   color: #8B008B;
+   font-size: 18px;
    font-weight: bolder;
    line-height: 0.6em;
    border: 2px dashed #fff;
    border-radius: 10px;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: bolder;
-   width:50%;
-   text-align: center
+   width:40%;
+   text-align: center;
 }
 
 body {
@@ -43,19 +43,19 @@ body {
 }
 
 #purchasingformButton, #showForm {
-   padding: 20px;
-   margin: 12px;
-   background: #ff7f50;
-   color: #fff;
-   font-size: 20px;
+   padding: 12px;
+   margin: 10px;
+   background: #ADFF2F;
+   color: #8B008B;
+   font-size: 18px;
    font-weight: bolder;
-   line-height: 1.3em;
+   line-height: 0.6em;
    border: 2px dashed #fff;
    border-radius: 10px;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-   font-weight: normal;
-   width:50%;
-   text-align: center
+   font-weight: bolder;
+   width:40%;
+   text-align: center;
 }
 
 body {
@@ -70,19 +70,19 @@ body {
 }
 
 #portfolioButton, #showPortfolio {
-  padding: 20px;
-   margin: 12px;
-   background: #ff7f50;
-   color: #fff;
-   font-size: 20px;
+   padding: 12px;
+   margin: 10px;
+   background: #ADFF2F;
+   color: #8B008B;
+   font-size: 18px;
    font-weight: bolder;
-   line-height: 1.3em;
+   line-height: 0.6em;
    border: 2px dashed #fff;
    border-radius: 10px;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-   font-weight: normal;
-   width:50%;
-   text-align: center
+   font-weight: bolder;
+   width:40%;
+   text-align: center;
 }
 
 body {
@@ -96,20 +96,19 @@ body {
 }
 
 #historyButton, #showHistory{
-   padding: 20px;
-   margin: 12px;
-   background: #ff7f50;
-   color: #fff;
-   font-size: 20px;
+   padding: 12px;
+   margin: 10px;
+   background: #ADFF2F;
+   color: #8B008B;
+   font-size: 18px;
    font-weight: bolder;
-   line-height: 1.3em;
+   line-height: 0.6em;
    border: 2px dashed #fff;
    border-radius: 10px;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-   font-weight: normal;
-   width:50%;
-   text-align: center
-
+   font-weight: bolder;
+   width:40%;
+   text-align: center;
 }
 
 body {
@@ -123,19 +122,19 @@ body {
 }
 
 #recommendButton {
-  padding: 20px;
-   margin: 12px;
-   background: #ff7f50;
-   color: #fff;
-   font-size: 20px;
+   padding: 12px;
+   margin: 10px;
+   background: #ADFF2F;
+   color: #8B008B;
+   font-size: 18px;
    font-weight: bolder;
-   line-height: 1.3em;
+   line-height: 0.6em;
    border: 2px dashed #fff;
    border-radius: 10px;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-   font-weight: normal;
-   width:50%;
-   text-align: center
+   font-weight: bolder;
+   width:40%;
+   text-align: center;
 }
 
 body {
