--- a/scripts/style.css
+++ b/scripts/style.css
@@ -37,6 +37,7 @@ body {
   text-align:left;	
   padding:50px;
   display:none;
+  background: #FFFF00;
   width:95%;
 }
 
@@ -63,7 +64,7 @@ body {
   padding:50px;
   display:none;
   background: #FFFF00;
-  width:65%;
+  width:55%;
 }
 
 #portfolioButton, #showPortfolio {
@@ -88,7 +89,7 @@ body {
   padding:50px;
   display:none;
   background: #FFFF00;
-  width:65%;
+  width:55%;
 }
 
 #historyButton, #showHistory{
@@ -113,7 +114,7 @@ body {
   padding:50px;
   display:none;
   background: #FFFF00;
-  width:65%;
+  width:55%;
 }
 
 #recommendButton {
