--- a/scripts/style.css
+++ b/scripts/style.css
@@ -19,11 +19,13 @@ body {
    padding: 12px;
    margin: 10px;
    background: #FFA500;
-   color: #8B008B;
+   color: #4169E1;
    font-size: 18px;
    font-weight: bolder;
    line-height: 0.6em;
    border-radius: 10px;
+   border: 2px dashed #fff;
+   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: bolder;
    width:40%;
    text-align: center;
@@ -45,11 +47,13 @@ body {
    padding: 12px;
    margin: 10px;
    background: #FFA500;
-   color: #8B008B;
+   color: #4169E1;
    font-size: 18px;
    font-weight: bolder;
    line-height: 0.6em;
    border-radius: 10px;
+   border: 2px dashed #fff;
+   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: bolder;
    width:40%;
    text-align: center;
@@ -71,11 +75,13 @@ body {
    padding: 12px;
    margin: 10px;
    background: #FFA500;
-   color: #8B008B;
+    color: #4169E1;
    font-size: 18px;
    font-weight: bolder;
    line-height: 0.6em;
    border-radius: 10px;
+   border: 2px dashed #fff;
+   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: bolder;
    width:40%;
    text-align: center;
@@ -96,11 +102,13 @@ body {
    padding: 12px;
    margin: 10px;
    background: #FFA500;
-   color: #8B008B;
+   color: #4169E1;
    font-size: 18px;
    font-weight: bolder;
    line-height: 0.6em;
    border-radius: 10px;
+   border: 2px dashed #fff;
+   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: bolder;
    width:40%;
    text-align: center;
@@ -121,11 +129,13 @@ body {
    padding: 12px;
    margin: 10px;
    background: #FFA500;
-   color: #8B008B;
+    color: #4169E1;
    font-size: 18px;
    font-weight: bolder;
    line-height: 0.6em;
    border-radius: 10px;
+   border: 2px dashed #fff;
+   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: bolder;
    width:40%;
    text-align: center;
