--- a/scripts/style.css
+++ b/scripts/style.css
@@ -19,7 +19,7 @@ body {
    padding: 12px;
    margin: 10px;
    background: #FFA500;
-   color: #4169E1;
+   color: #191970;
    font-size: 18px;
    font-weight: bolder;
    line-height: 0.6em;
@@ -47,7 +47,7 @@ body {
    padding: 12px;
    margin: 10px;
    background: #FFA500;
-   color: #4169E1;
+   color: #191970;
    font-size: 18px;
    font-weight: bolder;
    line-height: 0.6em;
@@ -57,6 +57,7 @@ body {
    font-weight: bolder;
    width:40%;
    text-align: center;
+   float: left;
 }
 
 body {
@@ -75,7 +76,7 @@ body {
    padding: 12px;
    margin: 10px;
    background: #FFA500;
-    color: #4169E1;
+   color: #191970;
    font-size: 18px;
    font-weight: bolder;
    line-height: 0.6em;
@@ -85,6 +86,7 @@ body {
    font-weight: bolder;
    width:40%;
    text-align: center;
+   margin-right: 10px;
 }
 
 body {
@@ -102,7 +104,7 @@ body {
    padding: 12px;
    margin: 10px;
    background: #FFA500;
-   color: #4169E1;
+   color: #191970;
    font-size: 18px;
    font-weight: bolder;
    line-height: 0.6em;
@@ -129,7 +131,7 @@ body {
    padding: 12px;
    margin: 10px;
    background: #FFA500;
-    color: #4169E1;
+   color: #191970;
    font-size: 18px;
    font-weight: bolder;
    line-height: 0.6em;
