--- a/scripts/style.css
+++ b/scripts/style.css
@@ -85,6 +85,7 @@ body {
    font-weight: bolder;
    width:40%;
    text-align: center;
+   float:left;
 }
 
 body {
@@ -96,6 +97,7 @@ body {
   display:none;
   background: #FFFF00;
   width:45%;
+  float:left;
 }
 
 #historyButton, #showHistory{
