--- a/scripts/style.css
+++ b/scripts/style.css
@@ -57,7 +57,7 @@ body {
    font-weight: bolder;
    width:40%;
    text-align: center;
-   float:left;
+   display: inline-block;
 }
 
 body {
@@ -86,7 +86,7 @@ body {
    font-weight: bolder;
    width:40%;
    text-align: center;
-   float:right;
+   display: inline-block;
 }
 
 body {
@@ -98,7 +98,7 @@ body {
   display:none;
   background: #FFFF00;
   width:45%;
-  float:right;
+  display: inline-block;
 }
 
 #historyButton, #showHistory{
@@ -115,6 +115,7 @@ body {
    font-weight: bolder;
    width:40%;
    text-align: center;
+   float:right;
 }
 
 body {
