--- a/scripts/style.css
+++ b/scripts/style.css
@@ -99,7 +99,7 @@ body {
   display:none;
   background: #FFFF00;
   width:45%;
-  display: inline-block;
+  float:right;
 }
 
 #historyButton, #showHistory{
