--- a/scripts/style.css
+++ b/scripts/style.css
@@ -27,7 +27,7 @@ body {
    border: 2px dashed #fff;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: bolder;
-   width:40%;
+   width:80%;
    text-align: center;
 }
 
@@ -39,8 +39,8 @@ body {
   text-align:left;	
   padding:50px;
   display:none;
-  background: #FFFF00;
-  width:95%;
+  background: #FFBD59;
+  width:85%;
 }
 
 #purchasingformButton, #showForm {
@@ -68,7 +68,7 @@ body {
   text-align:left;
   padding:50px;
   display:none;
-  background: #FFFF00;
+  background: #FFBD59;
   width:45%;
   float:left;
 }
@@ -97,7 +97,7 @@ body {
 #showPortfolio {
   padding:50px;
   display:none;
-  background: #FFFF00;
+  background: #FFBD59;
   width:45%;
   float:right;
 }
@@ -116,6 +116,7 @@ body {
    font-weight: bolder;
    width:40%;
    text-align: center;
+   display: inline-block;
 }
 
 body {
@@ -125,7 +126,7 @@ body {
 #showHistory {
   padding:50px;
   display:none;
-  background: #FFFF00;
+  background: #FFBD59;
   width:45%;
   display: inline-block;
 }
