--- a/scripts/style.css
+++ b/scripts/style.css
@@ -73,6 +73,36 @@ body {
   float:left;
 }
 
+#sellingformButton, #showsellForm {
+   padding: 12px;
+   margin: 10px;
+   background: #FFA500;
+   color: #191970;
+   font-size: 18px;
+   font-weight: bolder;
+   line-height: 0.6em;
+   border-radius: 10px;
+   border: 2px dashed #fff;
+   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+   font-weight: bolder;
+   width:40%;
+   text-align: center;
+   display: inline-block;
+}
+
+body {
+  padding: 15px;
+}
+
+#showsellForm {
+  text-align:left;
+  padding:50px;
+  display:none;
+  background: #FFBD59;
+  width:45%;
+  float:left;
+}
+
 #portfolioButton, #showPortfolio {
    padding: 12px;
    margin: 10px;
