--- a/scripts/style.css
+++ b/scripts/style.css
@@ -26,8 +26,8 @@ body {
    border-radius: 10px;
    border: 2px dashed #fff;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-   font-weight: bolder;
-   width:90%;
+   font-weight: normal;
+   width:85%;
    text-align: center;
 }
 
@@ -100,7 +100,7 @@ body {
   display:none;
   background: #FFBD59;
   width:45%;
-  float:left;
+  float:right;
 }
 
 #portfolioButton, #showPortfolio {
