--- a/scripts/style.css
+++ b/scripts/style.css
@@ -39,6 +39,7 @@ body {
   text-align:left;	
   padding:50px;
   display:none;
+  font-weight: normal;
   background: #FFBD59;
   width:100%;
 }
@@ -129,7 +130,7 @@ body {
   display:none;
   background: #FFBD59;
   width:45%;
-  float:right;
+  float:left;
 }
 
 #historyButton, #showHistory{
@@ -158,7 +159,7 @@ body {
   display:none;
   background: #FFBD59;
   width:45%;
-  display: inline-block;
+  display: right;
 }
 
 #recommendButton {
