--- a/scripts/style.css
+++ b/scripts/style.css
@@ -26,7 +26,7 @@ body {
    border-radius: 10px;
    border: 2px dashed #fff;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-   font-weight: normal;
+   font-weight: bolder;
    width:85%;
    text-align: center;
 }
@@ -176,6 +176,7 @@ body {
    font-weight: bolder;
    width:40%;
    text-align: center;
+   display: incline-block;
 }
 
 body {
