--- a/scripts/style.css
+++ b/scripts/style.css
@@ -118,7 +118,7 @@ body {
    font-weight: bolder;
    width:40%;
    text-align: center;
-   float: left;
+   display: inline-block;
 }
 
 body {
@@ -156,6 +156,7 @@ body {
 
 #showHistory {
   padding:50px;
+  text-align:left;
   display:none;
   background: #FFBD59;
   width:45%;
