--- a/scripts/style.css
+++ b/scripts/style.css
@@ -39,6 +39,7 @@ body {
   text-align:left;	
   padding:50px;
   display:none;
+  font-size: 15px;
   font-weight: normal;
   background: #FFBD59;
   width:100%;
