--- a/scripts/style.css
+++ b/scripts/style.css
@@ -42,7 +42,7 @@ body {
   font-size: 15px;
   font-weight: normal;
   background: #FFBD59;
-  width:100%;
+  width:85%;
 }
 
 #purchasingformButton, #showForm {
@@ -70,6 +70,7 @@ body {
   text-align:left;
   padding:50px;
   display:none;
+  line-height: 0.8em;
   background: #FFBD59;
   width:45%;
   float:left;
@@ -100,6 +101,7 @@ body {
   text-align:left;
   padding:50px;
   display:none;
+  line-height: 0.8em;
   background: #FFBD59;
   width:45%;
   float:right;
