--- a/scripts/style.css
+++ b/scripts/style.css
@@ -98,8 +98,9 @@ body {
 
 #showsellForm {
   text-align:left;
-  padding:50px;
+  padding:30px;
   display:none;
+  line-height: 0.4em;
   background: #FFBD59;
   width:45%;
   float:right;
