--- a/scripts/style.css
+++ b/scripts/style.css
@@ -67,9 +67,9 @@ body {
 
 #showForm {
   text-align:left;
-  padding:50px;
+  padding:12px;
   display:none;
-  line-height: 0.8em;
+  line-height: 0.3em;
   background: #FFBD59;
   width:45%;
   float:left;
@@ -98,12 +98,12 @@ body {
 
 #showsellForm {
   text-align:left;
-  padding: 10px;
+  padding: 12px;
   display:none;
-  line-height: 0.2em;
+  line-height: 0.3em;
   background: #FFBD59;
   width:45%;
-  float:right;
+  display: inline-block;
 }
 
 #portfolioButton, #showPortfolio {
