--- a/scripts/style.css
+++ b/scripts/style.css
@@ -36,9 +36,9 @@ body {
 
 #showEquity {
   text-align:left;	
-  padding:45px;
+  padding:35px;
   display:none;
-  font-size: 15px;
+  font-size: 16px;
   font-weight: normal;
   background: #FFBD59;
   width:85%;
@@ -72,6 +72,7 @@ body {
   line-height: 0.3em;
   background: #FFBD59;
   width:45%;
+  float:left;
 }
 
 #sellingformButton, #showsellForm {
