--- a/scripts/style.css
+++ b/scripts/style.css
@@ -67,10 +67,10 @@ body {
 
 #showForm {
   text-align:left;
-  padding:45px;
+  padding:35px;
   display:none;
   background: #FFBD59;
-  line-height: 0.4em;
+  font-size: 16px;
   width:40%;
 }
 
@@ -97,11 +97,11 @@ body {
 
 #showsellForm {
   text-align:left;
-  padding: 45px;
+  padding: 35px;
   display:none;
-  line-height: 0.4em;
   background: #FFBD59;
   width:40%;
+  font-size:16px;
   float:right;
   display: inline-block;
 }
