--- a/scripts/style.css
+++ b/scripts/style.css
@@ -71,7 +71,7 @@ body {
   display:none;
   background: #FFBD59;
   font-size: 16px;
-  width:35%;
+  width:40%;
 }
 
 #sellingformButton, #showsellForm {
@@ -100,9 +100,9 @@ body {
   padding: 35px;
   display:none;
   background: #FFBD59;
-  width:35%;
+  width:40%;
   font-size:16px;
-  float:right;
+  float:middle;
   display: inline-block;
 }
 
@@ -149,6 +149,7 @@ body {
    font-weight: bolder;
    width:40%;
    text-align: center;
+   display : inline-block;
 }
 
 body {
