--- a/scripts/style.css
+++ b/scripts/style.css
@@ -102,7 +102,7 @@ body {
   background: #FFBD59;
   width:40%;
   font-size:16px;
-  float:middle;
+  float:right;
   display: inline-block;
 }
 
@@ -149,7 +149,6 @@ body {
    font-weight: bolder;
    width:40%;
    text-align: center;
-   display : inline-block;
 }
 
 body {
