--- a/scripts/style.css
+++ b/scripts/style.css
@@ -36,12 +36,12 @@ body {
 
 #showEquity {
   text-align:left;	
-  padding:30px;
+  padding:35px;
   display:none;
-  font-size: 12px;
+  font-size: 11px;
   font-weight: normal;
   background: #FFBD59;
-  width:82%;
+  width:81%;
 }
 
 #purchasingformButton, #showForm {
@@ -88,6 +88,7 @@ body {
    font-weight: bolder;
    width:40%;
    text-align: center;
+   float:right;
    display: inline-block;
 }
 
