--- a/scripts/style.css
+++ b/scripts/style.css
@@ -74,6 +74,8 @@ body {
   background: #FFBD59;
   font-size: 16px;
   width:40%;
+  display: block
+  float:left
 }
 
 #sellingformButton, #showsellForm {
@@ -99,13 +101,13 @@ body {
 }
 
 #showsellForm {
+  float:left;
   text-align:left;
   padding: 40px;
   display:none;
   background: #FFBD59;
   width:40%;
   font-size:16px;
-  float:right;
   display: block;
 }
 
