--- a/scripts/style.css
+++ b/scripts/style.css
@@ -74,8 +74,8 @@ body {
   background: #FFBD59;
   font-size: 16px;
   width:40%;
-  display: block
-  float:left
+  display: block;
+  float:left;
 }
 
 #sellingformButton, #showsellForm {
@@ -101,7 +101,7 @@ body {
 }
 
 #showsellForm {
-  float:left;
+  float:right;
   text-align:left;
   padding: 40px;
   display:none;
@@ -112,6 +112,7 @@ body {
 }
 
 #portfolioButton, #showPortfolio {
+   display: left;
    padding: 12px;
    margin: 10px;
    background: #FFA500;
@@ -125,7 +126,6 @@ body {
    font-weight: bolder;
    width:40%;
    text-align: center;
-   display: inline-block;
 }
 
 body {
