--- a/scripts/style.css
+++ b/scripts/style.css
@@ -36,14 +36,13 @@ body {
 
 #showEquity {
   text-align:left;	
-  padding:40px;
+  padding:35px;
   display:none;
-  font-size: 11px;
+  font-size: 10px;
   font-weight: normal;
   background: #FFBD59;
   width:83%;
 }
-
 
 #purchasingformButton, #showForm {
    padding: 12px;
@@ -59,8 +58,7 @@ body {
    font-weight: bolder;
    width:40%;
    text-align: center;
-   display: block;
-   float:left;
+   display: inline-block;
 }
 
 body {
@@ -74,12 +72,9 @@ body {
   background: #FFBD59;
   font-size: 16px;
   width:40%;
-  display: block;
-  float:left;
 }
 
 #sellingformButton, #showsellForm {
-   float:left;
    padding: 12px;
    margin: 10px;
    background: #FFA500;
@@ -93,7 +88,7 @@ body {
    font-weight: bolder;
    width:40%;
    text-align: center;
-   display: block;
+   display: inline-block;
 }
 
 body {
@@ -101,18 +96,17 @@ body {
 }
 
 #showsellForm {
-  float:right;
   text-align:left;
   padding: 40px;
   display:none;
   background: #FFBD59;
   width:40%;
   font-size:16px;
-  display: block;
+  float:right;
+  display: inline-block;
 }
 
 #portfolioButton, #showPortfolio {
-   display: left;
    padding: 12px;
    margin: 10px;
    background: #FFA500;
@@ -126,6 +120,7 @@ body {
    font-weight: bolder;
    width:40%;
    text-align: center;
+   display: inline-block;
 }
 
 body {
