--- a/scripts/style.css
+++ b/scripts/style.css
@@ -14,7 +14,7 @@ body {
   min-height: 1000px;
 }
 
-#equityButton,#showEquity {
+#equityButton {
    padding: 15px;
    margin: 10px;
    background: #FFA500;
@@ -26,7 +26,7 @@ body {
    border: 2px dashed #fff;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: bolder;
-   width:92%;
+   width:94%;
    text-align: center;
 }
 
@@ -37,7 +37,7 @@ body {
   font-size: 10px;
   font-weight: normal;
   background: #FFBD59;
-  width:92%;
+  width:94%;
 }
 
 #purchasingformButton, #showForm {
