--- a/scripts/style.css
+++ b/scripts/style.css
@@ -32,12 +32,18 @@ body {
 
 #showEquity {
   padding: 50px;
-  text-align:left;	
-  display:none;
+  margin: 10px;	
+  background: #FFBD59;
+  color: #191970;
   font-size: 10px;
   font-weight: normal;
-  background: #FFBD59;
+  line-height: 0.6em;
+  border-radius: 10px;
+  border: 2px dashed #fff;
+  box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   width:94%;
+  text-align:left;
+  display:none;
 }
 
 #purchasingformButton, #showForm {
