--- a/scripts/style.css
+++ b/scripts/style.css
@@ -31,7 +31,8 @@ body {
 }
 
 #showEquity {
-  padding: 20px;	
+  padding: 15px;
+  margin: 10px;	
   background: #FFBD59;
   color: #191970;
   font-size: 10px;
