--- a/scripts/style.css
+++ b/scripts/style.css
@@ -42,7 +42,7 @@ body {
   border: 2px dashed #fff;
   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   width:96%;
-  text-align:left;
+  text-align: center;
   display:none;
 }
 
