--- a/scripts/style.css
+++ b/scripts/style.css
@@ -183,3 +183,17 @@ body {
   width:45%;
   text-align: center;
 }
+
+#postButton {
+  padding: 15px;
+  margin: 10px;
+  background: #FFA500;
+  color: #000000;   font-size: 18px;
+  font-weight: bolder;
+  line-height: 0.6em;
+  border-radius: 10px;   border: 2px dashed #fff;
+  box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+  font-weight: bolder;
+  width:45%;
+  text-align: center;
+}
