--- a/scripts/style.css
+++ b/scripts/style.css
@@ -90,6 +90,7 @@ body {
   font-weight: bolder;
   width:45%;
   text-align: center;
+  display: inline-block;
   float: right;
   margin-right: 5px;
 }
@@ -108,7 +109,7 @@ body {
   width:45%;
   text-align:left;
   display:none;
-  float: left;
+  float: right;
   margin-right: 5px;
 }
 
