--- a/scripts/style.css
+++ b/scripts/style.css
@@ -17,7 +17,7 @@ body {
 #welcome {
   padding: 15px;
   margin: 10px;
-  background: #FFA500;
+  background: #c0c0c0;
   color: #000000;
   font-size: 18px;
   font-weight: bolder;
